tests/macros/checkbox/default.stderr
error: option `default` does not exist for kind `checkbox`
 --> $DIR/default.rs:2:40
  |
2 |     inquisition::questions![checkbox { default: todo!() }];
  |                                        ^^^^^^^
