tests/macros/checkbox/default.rs
fn main() {
    inquisition::questions![checkbox { default: todo!() }];
}
